avoid VM crash when use removed CMS GC
GitOrigin-RevId: 5692b8bebecaec552313b36037fb165986614392